added github link

--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
                 </div>
             </div>
         </div>
+        <div class= "row">
+        <div class="col-6">
+            <a href="https://github.com/AnnaPCH/my-weather-app">Open SourceCode </a> by Anna Papadaki
+        </div>
+        </div>
+
     </div>
     <script src="src/index.js"></script>
 </body>
