--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <h1>
               Athens
             </h1>
-            <h2>
+            <h3>
               <span id="temperature">18</span>
               <span id="degrees">°C</span>
               <span id="current-weather-emoji">🌤</span>
-            </h2>
+            </h3>
             <h6>
               Sunday 16:00
             </h6>
@@ -33,7 +33,7 @@
           <div class="col-6">
             <form id="search-city-form">
               <input type="search" id="city-input" placeholder="Enter city" />
-              <button class="btn btn-success btn-sm">
+              <button class="btn btn-outline-light btn-sm">
                 Search
               </button>
             </form>
@@ -41,7 +41,7 @@
         </div>
         <div class="row">
           <div class="col-6">
-            <button class="btn btn-outline-success" id="conversion-btn">
+            <button class="btn btn-outline-light btn-sm" id="conversion-btn">
               °C to °F
             </button>
           </div>
