added the "description: element & little css styling

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
       <div class="card-body">
         <div class="row">
           <div class="col-6">
-            <h1>
+            <h2>
               Athens
-            </h1>
+            </h2>
             <h3>
               <span id="temperature">18</span>
               <span id="degrees">°C</span>
               <span id="current-weather-emoji">🌤</span>
+              <div id="description">Clear</div>
             </h3>
             <h6>
               Sunday 16:00
