--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
       <div class="card-body">
         <div class="row">
           <div class="col-6">
-            <h2>
-              Athens
-            </h2>
+            <h2></h2>
             <h3>
-              <span id="temperature">18</span>
-              <span id="degrees">°C</span>
+              <span id="temperature"></span>
+              <span id="degrees"></span>
               <span id="current-weather-emoji">🌤</span>
-              <div id="description">Clear</div>
+              <div id="description"></div>
             </h3>
             <h6>
               Sunday 16:00
