changed background img & the h2 again

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="card-body">
         <div class="row">
           <div class="col-6">
-            <h2></h2>
+            <h2>Heraklion</h2>
             <h3>
               <span id="temperature"></span>
               <span id="degrees"></span>
