fixed weather icon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h3>
               <span id="temperature"></span>
               <span class ="conversion"><a href="#">°C </a> | <a href="#"> °F</a></span>
-              <span id="current-weather-emoji">🌤</span>
+              <img src="#" id="icon"></img>
               <div id="description"></div>
             </h3>
            
