--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h2 id="city"></h2>
             <h3>
               <span id="temperature"></span>
-              <span class ="conversion"><a href="#">°C </a> | <a href="#"> °F</a></span>
+              <span class ="conversion"><a href="#" id="link-C" class ="active">°C </a> | <a href="#" id="link-F"> °F</a></span>
               <img src="#" id="icon"></img>
               <div id="description"></div>
             </h3>
