put opensource code link at the bottom

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             </div>
             </div>
    </div>
+ <div class= "name"><a href="https://github.com/AnnaPCH/my-weather-app">Opensource </a> code by Anna Papadaki</div>
 
   <script src="index.js"></script>
 </body>
